--- a/i18n/it/docusaurus-plugin-content-docs/current/04.user_guide/05.email_configure_client.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/04.user_guide/05.email_configure_client.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configure email clients
+title: Configurare un programma per mail
 ---
 
 import Tabs from '@theme/Tabs';
@@ -10,25 +10,25 @@ export function SmallInline({url, alt}) {
   return (<img src={useBaseUrl(url)} width="60" style={{verticalAlign: "middle", margin: "5px"}} alt={alt}/>);
 }
 
-You can fetch and send emails using your YunoHost instance from desktop email clients such as Thunderbird Desktop or on your smartphone with applications like K-9 Mail.
+Con la vostra istanza YunoHost potete inviare e ricevere email grazie a programmi come Thunderbird Desktop sul pc o K-9 Mail sul vostro smartphone.
 
-Modern mail clients should be able to configure themselves automatically. If autoconfiguration fails, you can do it manually following the instructions below. (If the autoconfiguration fails though, it should be understood as a bug in YunoHost, and we would be glad to read your feedback to try to reproduce the issue on our side!)
+Normalmente, il vostro client email si configura automaticamente quando aggiungete un account. Nel caso la configurazione automatica non funzionasse, è possibile configurare manualmente il client, seguendo i passaggi successivi. (la mancata configurazione automatica del client, è da considerarsi come un bug di YunoHost, sarebbe gentile da parte vostra farci pervenire una segnalazione, potremmo così cercare di correggere il problema!)
 
-### Generic settings
+### Impostazioni generiche
 
-Here are the element you should enter to manually configure your mail client (`domain.tld` refers to what's after the @ in your email address, and `username` what's before @).
+Ecco i valori da immettere per la configurazione manuale del vostro client mail (`vostro.dominio.tld` si riferisce a quello che appare dopo la @ nel vostro indirizzo mail, `nome utente` è riferito a quello che appare prima della @).
 
-| Protocol | Port | Encryption | Authentication  | Username                               |
+|Protocollo | Porta | Sicurezza della connessione | Metodo di autenticazione | Nome utente |
 | :--:     | :-:  | :--:       | :--:            | :--:                                   |
-| IMAP     | 993  | SSL/TLS    | Normal password | `username` (without the `@domain.tld`) |
-| SMTP     | 587  | STARTTLS   | Normal password | `username` (without the `@domain.tld`) |
+| IMAP | 993 | SSL/TLS | Password normale | nome utente (senza `@vostro.domino.tld`) |
+| SMTP | 587 | STARTTLS | Password normale| nome utente (senza `@vostro.domino.tld`) |
 
-### Client by client
+### Esempio di alcuni client
 
 <Tabs>
 <TabItem value="thunderbird" label="Mozilla Thunderbird">
 
-##### <SmallInline url='/img/thunderbird.png'/> Configure Thunderbird Desktop (on a desktop computer)
+#### <SmallInline url='/img/thunderbird.png'/>  Configurazione di Thunderbird Desktop (su computer desktop)
 
 To manually configure a new account in Thunderbird Desktop, add the account information, then click on 'Configure manually'.
 
@@ -41,12 +41,10 @@ You may need to accept the certificate exceptions for fetching mails and after y
 ![](/img/thunderbird_config_1.png)
 ![](/img/thunderbird_config_2.png)
 
-- [Manage alias mails](https://support.mozilla.org/en-US/kb/configuring-email-aliases)
+- [Gestione alias email](https://support.mozilla.org/en-US/kb/configuring-email-aliases)
 
 </TabItem>
 <TabItem value="k9" label="K-9 Mail (Thunderbird Mobile)">
-
-##### <SmallInline url='/img/k9mail.png'/> Configure K-9 Mail / Thunderbird Mobile (on Android)
 
 Follow the following steps. (As for Thunderbird Desktop, you might need to accept certificates at some points)
 
@@ -63,16 +61,16 @@ Follow the following steps. (As for Thunderbird Desktop, you might need to accep
 </TabItem>
 <TabItem value="dekko" label="Dekko">
 
-##### <SmallInline url='/img/dekko-app.png'/> Configure Dekko (on Ubuntu Touch)
+##### <SmallInline url='/img/dekko-app.png'/> Configurazione di Dekko (per Ubuntu Touch)
 
-The first time you can simply choose "Add account". If you already have an account configured, tap the hamburger menu then tap the gear, choose Mail, Accounts and press the '+'-symbol.
+Se nessun account è già configurato, potete semplicemente scegliere "Aggiungi account". Se un account è già presente, premete sul menù a panino e in seguito sugli ingranaggi, scegliete Mail, Accounts e il simbolo '+'.
 
-Then you choose IMAP. Fill in the fields and press Next. Now Dekko will look for the configuration. Check that all fields are correct. Make sure you have your YunoHost username, NOT your email address and choose "Allow untrusted certificates". Do this for IMAP and SMTP and press Next. Dekko will now synchronise the account after which you are done. Congratz!
+Selezionate IMAP. Compilate i campi e premete Successivo. Dekko cercherà la configurazione necessaria. Controllate che tutti i campi siano corretti. Assicuratevi di aver inserito come nome utente il nome utente di YunoHost e NON il vostro indirizzo mail, scegliete "Autorizza certificati non firmati". Effettuate queste operazioni per IMAP e per SMTP e premete Successivo. Aspettate che Dekko termini la sincronizzazione dell'account. Avete finito! Complimenti!
 
 <img src="/img/dekko_config_1.png" width="280"/>
 <img src="/img/dekko_config_2.png" width="280"/>
 <img src="/img/dekko_config_3.png" width="280"/>
 <img src="/img/dekko_config_4.png" width="280"/>
 
-</TabItem>
+  </TabItem>
 </Tabs>
