--- a/i18n/fr/docusaurus-plugin-content-docs/current/04.user_guide/10.email_migration.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/04.user_guide/10.email_migration.mdx
@@ -1,48 +1,48 @@
 ---
-title: Migrating email from an email provider to a YunoHost instance
+title: Migrer ses emails d'un ancien serveur mail vers YunoHost
 ---
 
-*[Documentation linked to YunoHost email](/administer/admin_guide/email)*.
+*[Documentation en rapport avec l’email de YunoHost](/administer/admin_guide/email)*.
 
-Migration of emails from one server to another can be done with two recommended tools: ImapSync or Larch.
+La migration des emails d’un serveur à un autre peut se faire via deux outils recommandés : ImapSync ou Larch.
 
-This tool must be installed on your desktop computer. The transfer method looks at this schema:
+Cet outil doit être installé sur votre ordinateur de bureau. La procédure de transfert est comme sur le schéma :
 
-**`Old email server −> desktop computer with ImapSync or Larch −> new email server`**
+**`Ancien serveur email −> ordinateur client avec ImapSync ou Larch −> nouveau serveur email`**
 
 ### ImapSync
 
-[ImapSync site](http://imapsync.lamiral.info/)
+[Site d’ImapSync](http://imapsync.lamiral.info/)
 
-Install ImapSync on your client computer by following this [guide](http://imapsync.lamiral.info/INSTALL):
-
-```bash
-sudo dnf install imapsync # Under Fedora
-```
-
-Transfer emails from one server to another:
+Installez ImapSync sur votre ordinateur client en suivant ce [guide](http://imapsync.lamiral.info/INSTALL) :
 
 ```bash
-imapsync --host1 <domain/IP> --port1 993 --ssl1 --user1 <user> --password1 <password> \
---host2 <domain/IP> --port2 993 --ssl2 --user2 <user> --password2 <password>
+sudo dnf install imapsync # Sous Fedora
 ```
 
-Note that transfer settings `--port 993` and `--ssl` are specific to YunoHost email server.
+Transférez les mails d’un serveur à l’autre :
+
+```bash
+imapsync --host1 <domaine/IP> --port1 993 --ssl1 --user1 <utilisateur> --password1 <mdp> \
+--host2 <domaine/IP> --port2 993 --ssl2 --user2 <utilisateur> --password2 <mot de passe>
+```
+
+Notez que les paramètres de transfert `--port 993` et `--ssl` sont spécifiques à un serveur de mail YunoHost.
 
 ### Larch
 
-[Larch site](https://github.com/rgrove/larch/)
+[Site de Larch](https://github.com/rgrove/larch/)
 
-After beforehand installed `gem`, install `larch` on your client computer:
+Après avoir préalablement installé `gem`, installez `larch` sur votre ordinateur client :
 
 ```bash
 sudo gem install larch
 ```
 
-Transfer emails from one server to another:
+Transférez les mails d’un serveur à l’autre :
 
 ```bash
-larch -a -f imaps://server_of_origin.org -t imaps://server_of_destination.org
+larch -a -f imaps://serveur_d'origine.org -t imaps://serveur_de_destination.org
 ```
 
-For other types of transfer refer to [Larch documentation](https://github.com/rgrove/larch#label-Usage).
+Pour d’autres types de transferts référez-vous à la [documentation de Larch](https://github.com/rgrove/larch#label-Usage).
